pr fixes